<resources>
    <string name="app_name">Mexia</string>
    <string name="title_home">Home</string>
    <string name="title_archievments">Archievment</string>
    <string name="title_progress">Progress</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon">Icon</string>
    <string name="title_home_menu1">Pengenalan Huruf</string>
    <string name="mic_ouput">Mic Ouput</string>
    <string name="menulis">Menulis Huruf</string>
    <string name="membaca">Pengenalan Kata</string>
    <string name="home_notif">Halo, Selamat Pagi\nAyo Belajar</string>
    <string name="membaca_desc">Latih kecermatanmu dalam menulis dan membaca kata dengan mudah</string>
    <string name="membaca_title">Membaca</string>
    <string name="pengenalan_huruf_desc">Latih kemampuanmu dalam menulis dan membaca huruf</string>
    <string name="puzzle_title">Puzzle</string>
    <string name="puzzle_desc">Latih kecermatanmu dalam mencari kata yang terpisah untuk menjadi kata yang sempurna dengan bermain puzzle</string>
    <string name="membaca_kata">Membaca Kata</string>
    <string name="membaca_kata_desc">Ayo belajar membaca kata agar kemampuanmu dalam membaca menjadi lebih baik lagi</string>
    <string name="menulis_kata">Menulis Kata</string>
    <string name="menulis_kata_desc">Ayo belajar menulis kata agar kemampuanmu dalam menulis menjadi lebih baik lagi</string>
    <string name="level_mudah">Level Mudah</string>
    <string name="level_mudah_desc">Ayo bermain puzzle dengan level mudah untuk melatih kemampuanmu membaca</string>
    <string name="level_sedang">Level Sedang</string>
    <string name="level_sedang_desc">Ayo bermain puzzle dengan level sedang untuk meningkatkan kemampuanmu membaca</string>
    <string name="level_sulit">Level Sulit</string>
    <string name="level_sulit_desc">Ayo bermain puzzle dengan level sulit agar kamu semakin hebat dalam membaca</string>
    <string name="level_akhir">Level Akhir</string>
    <string name="level_akhir_desc">Ayo bermain puzzle dengan level akhir untuk semakin meningkatkan kemampuanmu</string>
    <string name="test">Test</string>
    <string name="test_desc">Saatnya mengukur kemampuan dengan melakukan test</string>
    <string name="menulis_huruf_desc">Ayo belajar menulis huruf, agar kemampuanmu semakin meningkat</string>
    <string name="membaca_desc_pengenalan_huruf">Ayo belajar membaca agar kemampuanmu dalam membaca semakin meningkat</string>
    <string name="textView_pengenalan_huruf">Ayo latih kemampuanmu dalam menulis dan membaca</string>
    <string name="lanjut">Lanjut</string>
    <string name="sampel_huruf">A</string>
    <string name="sampel_huruf_result">...</string>
    <string name="baca_huruf">Coba Baca huruf di atas dengan keras</string>
    <string name="instruksi_menulis_huruf">Tulis huruf ini di papan tulis</string>
    <string name="papan_tulis">Papan Tulis</string>
    <string name="instruksi_pengenalan_huruf">Baca huruf di papan tulis dengan menekan tombol merah</string>
    <string name="membaca_huruf">Membaca Huruf</string>
    <string name="textView_membaca_head">Ayo latih kemampuanmu dengan belajar lagi</string>
    <string name="instruksi_pengenalan_kata">Baca kata di papan tulis dengan menekan tombol merah</string>
    <string name="sampel_kata">Rumah</string>
    <string name="sampel_menulis_kata">Makan</string>
    <string name="instruksi_menulis_kata">Tulis kata di bawah kedalam papan tulis</string>
    <string name="baca_kata">Coba baca kata diatas dengan keras</string>
    <string name="title_home_menu2">Pengenalan Kata</string>
    <string name="ic_menu">Menu</string>
    <string name="bantuan">Bantuan</string>
    <string name="kontak">Kontak</string>
    <string name="setting">Setting</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="instruksi_bermain_puzzle">Ayo bermain puzzle</string>
    <string name="check">Checking</string>
    <string name="keluar">Keluar</string>
    <string name="ubah_profile">Ubah Profile</string>
    <string name="masuk">Masuk</string>
    <string name="bakcground_progress">Bakcground Progress</string>
    <string name="pengenalan_huruf_xp">Pengenalan Huruf (XP)</string>
    <string name="pengenalan_kata_xp">Pengenalan Kata (XP)</string>
    <string name="puzzle_xp">Puzzle (XP)</string>
    <string name="soal_gambar">Soal gambar</string>
    <string name="penghargaan">Penghargaan</string>
</resources>