<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.home.pengenalankata.MembacaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/costum_toolbar_bg"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/costum_toolbar_bg"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="8dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_arrow_back"/>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textViewArch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_red_light"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_membaca_head"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />
    <ImageView
        android:id="@+id/mic_membaca_head"
        android:layout_marginTop="4dp"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_gravity="end"
        android:src="@drawable/ic_speaker"
        app:layout_constraintTop_toTopOf="@id/textViewArch"
        app:layout_constraintBottom_toBottomOf="@id/textViewArch"
        app:layout_constraintStart_toEndOf="@id/textViewArch"
        android:contentDescription="@string/mic_ouput" />

    <TextView
        android:id="@+id/yellow_voice"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewArch" />

    <androidx.cardview.widget.CardView
        android:id="@+id/m_menuliskata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/yellow_voice"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/menulis_kata"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/icon" />
            <TextView
                android:id="@+id/menulis_kata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:text="@string/menulis_kata"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/img2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@id/menulis_kata"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/menulis_kata_desc"/>
            <ImageView
                android:id="@+id/mic_menu2"
                android:layout_marginTop="4dp"
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_speaker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/mic_ouput" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/m_membacakata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/m_menuliskata"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/membaca_menu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/icon" />
            <TextView
                android:id="@+id/membaca_kata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/membaca_kata"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/img1"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/membaca_kata_desc"
                app:layout_constraintTop_toBottomOf="@id/membaca_kata"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <ImageView
                android:id="@+id/mic_menu1"
                android:layout_marginTop="4dp"
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_speaker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/mic_ouput" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>