<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="58dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.progress.ProgressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="16dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewInfo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardElevation="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_card_red"
                    android:contentDescription="@string/bakcground_progress" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textSize="32sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/xp_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/progress_horizontal"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="XP: 200"/>

                <TextView
                    android:id="@+id/level_xp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/progress_horizontal"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="Pemula"/>
                <ProgressBar
                    android:id="@+id/progress_horizontal"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:progressDrawable="@drawable/bg_progress"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginHorizontal="16dp"
                    android:scaleY="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewPPG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardViewInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:text="@string/pengenalan_huruf_xp"
            android:textColor="@color/colorBlack"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/progress_pengenalan_huruf"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/textViewPPG"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"/>


        <TextView
            android:id="@+id/textViewPPK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/progress_pengenalan_huruf"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:text="@string/pengenalan_kata_xp"
            android:textColor="@color/colorBlack"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/progress_pengenalan_kata"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/textViewPPK"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"/>



        <TextView
            android:id="@+id/textViewPuzzle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/progress_pengenalan_kata"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:text="@string/puzzle_xp"
            android:textColor="@color/colorBlack"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/progress_puzzle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/textViewPuzzle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/progress_puzzle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:text="@string/puzzle_xp"
            android:textColor="@color/colorBlack"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/progress_test"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>